--- a/index.html
+++ b/index.html
@@ -29,6 +29,7 @@
   <style>
   body {
     background-color: #d24dff;
+    <iframe width="352" height="620" style="border: 0px;" src="https://studio.code.org/projects/applab/O7Ku4jgww3KmqdGrevflzHKp03DTKFJVoyU6VtYEKBI/embed"></iframe>
 }
     <style/>
     
