--- a/index.html
+++ b/index.html
@@ -31,6 +31,11 @@
     background-color: #d24dff;
     <iframe width="380" height="620" style="border: 0px;" src="https://studio.code.org/projects/applab/O7Ku4jgww3KmqdGrevflzHKp03DTKFJVoyU6VtYEKBI/embed"></iframe>
 }
+    .cluck {
+  text-align: center;
+  font-family: Consolas;
+  font-size: small;
+  color: 	#FFFF99;
     <style/>
     
   
