--- a/fotenite.html
+++ b/fotenite.html
@@ -1,1 +1,8 @@
- <img src=https://i.pinimg.com/originals/8a/38/c9/8a38c9e1c0cc05851e949d0334a35856.png>
+<!DOCTYPE HTML>
+<body>
+ <p>Do you hate Buck Cluck too?</p>
+       <form action="/action_page.php">
+  <label for="buck">yes</label>
+  <input type="radio" name="gender" id="buck" value="buck"><br>
+          <input type="submit" value="Submit"> 
+        </body>
