--- a/fotenite.html
+++ b/fotenite.html
@@ -5,4 +5,10 @@
   <label for="buck">yes</label>
   <input type="radio" name="gender" id="buck" value="buck"><br>
           <input type="submit" value="Submit"> 
+        .cluck {
+  text-align: center;
+  font-family: Consolas;
+  font-size: small;
+  color: 	#FFFF99;
+}
         </body>
