--- a/fotenite.html
+++ b/fotenite.html
@@ -1,14 +1,45 @@
 <!DOCTYPE HTML>
 <body>
+  <ul>
+  <li><a href="home.html">Home</a></li>
+  <li><a href="fotenite.html">News</a></li>
+  <li><a href="build.html">Contact</a></li>
+</ul>
  <p>Do you hate Buck Cluck too?</p>
        <form action="/action_page.php">
   <label for="buck">yes</label>
   <input type="radio" name="gender" id="buck" value="buck"><br>
           <input type="submit" value="Submit"> 
+        <style>
         .cluck {
   text-align: center;
   font-family: Consolas;
   font-size: small;
   color: 	#FFFF99;
 }
+          ul {
+  list-style-type: none;
+  margin: 0;
+  padding: 0;
+  overflow: hidden;
+  background-color: #333;
+}
+
+li {
+  float: left;
+}
+
+li a {
+  display: block;
+  color: white;
+  text-align: center;
+  padding: 14px 16px;
+  text-decoration: none;
+}
+
+/* Change the link color to #111 (black) on hover */
+li a:hover {
+  background-color: #111;
+}
+        </style>
         </body>
