--- a/fotenite.html
+++ b/fotenite.html
@@ -41,5 +41,8 @@ li a {
 li a:hover {
   background-color: #111;
 }
+          body {
+    background-color: #d24dff;
+}
         </style>
         </body>
