--- a/fotenite.html
+++ b/fotenite.html
@@ -2,7 +2,7 @@
 <body>
   <ul>
   <li><a href="home.html">Home</a></li>
-  <li><a href="fotenite.html">News</a></li>
+  <li><a href="fotenite.html">You're Opinion Matters!</a></li>
   <li><a href="build.html">Contact</a></li>
 </ul>
  <p>Do you hate Buck Cluck too?</p>
