--- a/build.html
+++ b/build.html
@@ -1,3 +1,20 @@
 <!DOCTYPE HTML>
 <body>
+   <ul>
+  <li><a href="home.html">Home</a></li>
+  <li><a href="fotenite.html">News</a></li>
+  <li><a href="build.html">Contact</a></li>
+</ul>
 <img src="https://static.miraheze.org/toxicfandomsandhatedomswiki/thumb/7/72/Cluck.jpg/1200px-Cluck.jpg"; width="auto" height="400">
+<style>
+  .cluck {
+  text-align: center;
+  font-family: Consolas;
+  font-size: small;
+  color: 	#FFFF99;
+     body {
+    background-color: #d24dff;
+}
+  </style>
+</body>
+</html>
