--- a/build.html
+++ b/build.html
@@ -2,8 +2,8 @@
 <body>
    <ul>
   <li><a href="home.html">Home</a></li>
-  <li><a href="fotenite.html">News</a></li>
-  <li><a href="build.html">Contact</a></li>
+  <li><a href="fotenite.html">You're Opinion Matters!</a></li>
+  <li><a href="build.html">Look at this Idiot!</a></li>
 </ul>
 <img src="https://static.miraheze.org/toxicfandomsandhatedomswiki/thumb/7/72/Cluck.jpg/1200px-Cluck.jpg"; width="auto" height="400">
 <style>
