--- a/fotenite.html
+++ b/fotenite.html
@@ -3,7 +3,7 @@
   <ul>
   <li><a href="home.html">Home</a></li>
   <li><a href="fotenite.html">You're Opinion Matters!</a></li>
-  <li><a href="build.html">Contact</a></li>
+  <li><a href="build.html">Look at this Idiot!</a></li>
 </ul>
  <p>Do you hate Buck Cluck too?</p>
        <form action="/action_page.php">
