--- a/home.html
+++ b/home.html
@@ -4,7 +4,7 @@
       <ul>
   <li><a href="home.html">Home</a></li>
   <li><a href="fotenite.html">You're Opinion Matters!</a></li>
-  <li><a href="build.html">Contact</a></li>
+  <li><a href="build.html">Look at this Idiot!</a></li>
 </ul>
        
     <div class="cluck">
